# loopautoma

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLANS.html  PLANS.md  README.md  RELEASE_BUILD_VALIDATION.md  RELEASE_FIX_SUMMARY.md  TRIGGER_RELEASE.md  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yaml  ci.yaml  ci.yml  docker-build.yaml  package-check.yaml  release.yaml
coverage/: coverage-final.json  lcov.info
coverage/lcov-report/: index.html
coverage/perf/: soak-hardware-2025-11-15.json  soak-hardware-2025-11-15.time
doc/: INSTALL.md  PHASE1-COMPLETION.md  actionPersistenceFix.md  actionRecorderFixes.md  actionRecorderPhase8Compaction.md  architecture.md  ciWorkflowAudit.md  copilotBrandingRemoval.md  coverageAchievement.md  developer.md  developerConsole.md  e2eSummary.md  e2eVerification.md  inputCaptureAutoTransform.md  inputRecorderHelper.md  inputRecordingDiagnostics.md  install.md  llmPromptGeneration.md  manualVerificationGuide.md  openaiIntegration.md  perfBaseline.md  phase1Completion.md  phase1PrSummary.md  phase4Completion.md  phase4UXChecklist.md  post-phase2-gap-analysis.md  releaseBuild.md  rollout-plan.md  securityReview.md  tenIssuesComplete.md  tenIssuesProgress.md  terminationPatterns.md  testParallelism.md  triggerRelease.md  ubuntuBuildFixSummary.md  ubuntuReleaseBuildFix.md  ubuntuReleaseFeatureFix.md  uiBehaviorSpec.md  uiImprovementsSummary.md  userManual.md  (+1 more)
docs/: developer.md  rollout-plan.md
scripts/: generateSettingsScreenshots.ts  generateUiScreenshot.ts  preReleaseCheck.ts  testAudio.sh  updateVersionsFromTag.ts  verifyX11Features.sh
src/: App.css  App.tsx  eventBridge.ts  main.tsx  store.ts  tauriBridge.ts  tauriSecureStorage.ts  testConstants.ts  types.ts
src-tauri/: Cargo.toml  lcov.info  tauri.conf.json
src-tauri/coverage/lcov-report/: index.html
src-tauri/src/: action.rs  audio.rs  condition.rs  domain.rs  fakes.rs  lib.rs  llm.rs  main.rs  monitor.rs  secure_storage.rs  soak.rs  tests.rs  trigger.rs
src-tauri/src/os/: linux.rs  macos.rs  windows.rs
src-tauri/tests/: integration_x11.rs
src/components/: AcceleratingNumberInput.tsx  ActionRecorderWindow.tsx  CountdownTimer.tsx  EventLog.tsx  GraphComposer.tsx  Icons.tsx  KeyboardReferenceOverlay.tsx  ModelSelector.tsx  PrerequisiteCheck.tsx  RecordingBar.tsx  (+8 more)
tests/: actionrecorder.vitest.tsx  button-text-truncation.vitest.tsx  countdowntimer.vitest.tsx  coverage.vitest.test.ts  eventlog.vitest.test.tsx  eventlog.vitest.tsx  graphcomposer.actions.vitest.tsx  graphcomposer.clearall.vitest.tsx  graphcomposer.vitest.tsx  guardrails-ui.vitest.test.tsx  guardrails-ui.vitest.tsx  hello.bun.test.ts  hello.test.ts  icons.vitest.tsx  monitor-control.vitest.tsx  profileeditor.vitest.test.tsx  profileeditor.vitest.tsx  quit-button.vitest.tsx  recordingbar.buffer.vitest.tsx  recordingbar.vitest.tsx  region-authoring-panel.vitest.tsx  region-overlay.vitest.tsx  region-utils.test.ts  runtime-utils.vitest.ts  screen-preview.vitest.tsx  settingspanel.vitest.tsx  special-keys.test.ts  store.vitest.ts  termination-conditions-editor.vitest.tsx  types-store.vitest.ts  ui.components.vitest.test.tsx  ui.components.vitest.tsx
(+31 files in other folders)
