[package]
name = "loopautoma"
version = "0.1.0"
description = "Loopautoma — cross-platform desktop automation via Tauri"
authors = ["Chris Gleissner <chrisgleissner@gmail.com>"]
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/chrisgleissner/loopautoma"
homepage = "https://github.com/chrisgleissner/loopautoma"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loopautoma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = { version = "0.8.10", optional = true }
xcap = { version = "0.7", optional = true }
ahash = { version = "0.8", optional = true }
enigo = { version = "0.1.3", optional = true }
 
[features]
default = ["os-linux-capture"]
os-linux-capture = ["screenshots", "ahash"]
os-linux-capture-xcap = ["xcap", "ahash"]
os-linux-input = ["enigo"]
os-macos = []
os-windows = []

