[package]
name = "loopautoma"
version = "0.1.0"
description = "Loopautoma — cross-platform desktop automation via Tauri"
authors = ["Chris Gleissner <chrisgleissner@gmail.com>"]
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/chrisgleissner/loopautoma"
homepage = "https://github.com/chrisgleissner/loopautoma"
readme = "../README.md"
default-run = "loopautoma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loopautoma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = { version = "0.7.1", optional = true }
ahash = { version = "0.8", optional = true }
x11rb = { version = "0.13.2", optional = true, features = ["xinput", "xtest", "xkb", "allow-unsafe-code"] }
xkbcommon = { version = "0.9.0", optional = true, features = ["x11"] }
screenshots = { version = "0.8.10", optional = true }
image = { version = "0.24", default-features = false, features = ["png"] }
base64 = "0.21"
windows = { version = "0.58", optional = true, features = [
	"Win32_Foundation",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }
 
[features]
default = ["os-linux-capture-xcap", "os-linux-input"]
os-linux-capture-xcap = ["xcap", "ahash"]
os-linux-input = ["x11rb", "xkbcommon"]
os-macos = ["screenshots"]
os-windows = ["screenshots", "windows"]
